# SoundBridge

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Option.cmake  README.md  toolchain.linux_gcc.cmake  toolchain.linux_x86_64_gcc.cmake  toolchain.windows_mingw.cmake  toolchain.windows_x86_64_mingw.cmake  toolchan.linux_gcc.cmake  toolchan.windows_mingw.cmake
app/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h
cmake/: utils.cmake
cmake/toolchain/: toolchain.linux_arm_gnueabihf_gcc.cmake  toolchain.windows_x86_64_mingw.cmake
doc/: README.md  class-uml.drawio
music/: 小镇姑娘-陶喆.96.amr  摇滚乐_Freesound.m4a  萨克斯机.asf
sdk/: AudioBuffer.cpp  AudioBuffer.h  CMakeLists.txt  MusicPlayList.cpp  MusicPlayList.h  MusicPlayer.cpp  MusicPlayer.h
sdk/audio/: CMakeLists.txt
sdk/audio/common/: AudioCommon.hpp
sdk/audio/decode/: AudioDecode.cpp  AudioDecode.h  AudioDecodeProcess.cpp  AudioDecodeProcess.h  CMakeLists.txt  FLACDecode.cpp  FLACDecode.h  VorbisDecode.cpp  VorbisDecode.h
sdk/audio/device/: AudioDevice.cpp  AudioDevice.h  CMakeLists.txt  test.cpp
sdk/audio/resample/: AudioResample.cpp  AudioResample.h  CMakeLists.txt  test.cpp
sdk/cosmos/: Any.hpp  Aspect.hpp  Bind.hpp  DllParser.hpp  Format.hpp  Ioc.hpp  Lazy.hpp  LinqCpp.hpp  MessageBus.hpp  Nan-boxing.hpp  NonCopyable.hpp  Optional.hpp  Range.hpp  ScopeGuard.hpp  SharedptrUtil.hpp  SyncQueue.hpp  ThreadPool.hpp  Timer.hpp  Variant.hpp  WorkQueue.hpp  cache.hpp  fun_test.hpp  function_message_bus.hpp  function_traits.hpp  lexical_cast.hpp  modern_functor.hpp  modern_messagebus.hpp  pod_reflection.hpp  reflection.hpp  router.hpp  type_name.hpp  variadic2tuple.hpp
sdk/extractor/: ByteUtils.cpp  ByteUtils.h  ByteUtils.hpp  CMakeLists.txt  DataSource.hpp  Errors.h  ExtractorApi.h  ExtractorFactory.cpp  ExtractorFactory.h  ExtractorHelper.hpp  FileSearch.cpp  FileSearch.h  FileSource.cpp  FileSource.h
sdk/extractor/aac/: AACExtractor.cpp  AACExtractor.h  CMakeLists.txt
sdk/extractor/aiff/: AIFFExtractor.cpp  AIFFExtractor.h
sdk/extractor/asf/: ASFExtractor.cpp  ASFExtractor.h
sdk/extractor/flac/: FLACExtractor.cpp  FLACExtractor.h
sdk/extractor/m4a/: M4AExtractor.cpp  M4AExtractor.h
sdk/extractor/mp3/: ID3.cpp  ID3.h  MP3Extractor.cpp  MP3Extractor.h
sdk/extractor/ogg/: OGGExtractor.cpp  OGGExtractor.h
sdk/extractor/wav/: CMakeLists.txt  WAVExtractor.cpp  WAVExtractor.h
sdk/file/: CMakeLists.txt  FileSearch.cpp
sdk/log/: CMakeLists.txt  LogWrapper.cpp  LogWrapper.h  test.cpp
sdk/log/boost_log/: CMakeLists.txt  LogWrapper.cpp  LogWrapper.h
sdk/test/: 6-48000_fltp_1.aac  6-48000_fltp_2.aac  CMakeLists.txt  TestAudioDecode.cpp  TestAudioDevice.cpp  TestAudioResample.cpp  TestFFmpegAudioDecode.cpp  TestFileSearch.cpp  TestMusicPlayer.cpp
sdk/utils/: AudioBuffer.h  ByteUtils.cpp  ByteUtils.h  CMakeLists.txt  ErrorUtils.h
